Completed content for projects page, adjusting layout for projects section

--- a/projectsandadditionalstudies/projects.html
+++ b/projectsandadditionalstudies/projects.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div>
-            <h1>Juan Pina-Sanz</h1>
+            <h1><a href="../index.html" style='text-decoration: none; color: white;'> Juan Pina-Sanz</a></h1>
             <h2>Bachelor of Computer Science</h2>
         </div>
     </header>
@@ -20,200 +20,106 @@
     <div class="main-content">
 
         <div class="site-wrap flex-column flex-wrap">
+
             <div class="row">
                 <div>
                     <h3>Additional Studies</h3>
                 </div>
             </div>
-
             <div class="flex-row">
                 <ul>
                     <li>
-                        <h3 class="secondary">Coursera: HTML, CSS, and Javascript for Web Developers</h3>
-                        <p>Offered by: Johns Hopkins University</p>
-                        <p>Course Completion Date: Sept 2020</p>
-                        <div>
-
-                        </div>
-                        <div class="d-flex" style='flex-direction: row;'>
-                            <div class="col-8">
-                                <p>Aimed at providing students with the basic tools for web development. This course teaches students how to implement modern web pages with HTML and CSS, implement responsive web design, and use JavaScript to build a web
-                                    application that utilizes Ajax. </p>
+                        <div class="d-flex flex-row">
+                            <div class="col-9 ">
+                                <h3 class="secondary">Coursera: HTML, CSS, and Javascript for Web Developers</h3>
+                                <p>Offered by: Johns Hopkins University</p>
+                                <p>Course Completion Date: Sept 2020</p>
+                                <div>
+                                    <p>Aimed at providing students with the basic tools for web development. This course teaches students how to implement modern web pages with HTML and CSS, implement responsive web design, and use JavaScript to build a
+                                        web application that utilizes Ajax. </p>
+                                    <p>
+                                        This five week course designed to introduce students to the basics of web application development. Combined with my own back ground in computer science, I found this course to be facinating and useful as I continued my own study of application development.
+                                    </p>
+                                    <p>
+                                        Utlization of tools such as jQuery and Ajax strengthened my understanding of web development and how to efficiently use web frameworks and tools such as Bootstrap to build intuitive and responsive web sites.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="col-4">
-                                <p>IMAGE PLACE HOLDER</p>
-                                <!-- <img src="https://live.staticflickr.com/65535/50642616803_e34d2ff329_b.jpg" style='height:"115px"; width:"400px"; object-fit: contain;' /> -->
+                            <div class="col-3 ">
+                                <img class="img-fluid" style='max-width: 90%; height: auto;' src="https://live.staticflickr.com/65535/50646125781_712cb30126_b.jpg" />
                             </div>
                         </div>
                     </li>
+                    <!--Item 1-->
                 </ul>
             </div>
+            <!--Additional Studies-->
+
             <div class="row">
                 <div>
                     <h3>Certifications</h3>
                 </div>
             </div>
 
-            <div class="flex-row">
+            <div class="d-flex flex-row">
                 <ul>
                     <li>
-                        <h3 class="secondary">ServiceNow Systems Administrator</h3>
-                        <div class="d-flex flex-row">
-                            <div class="col-8">
-                                <p>Course Description</p>
+                        <div class="d-flex flex-row justify-content-center">
+                            <div class="col-9">
+                                <h3 class="secondary">ServiceNow Systems Administrator</h3>
+                                <p>Certification Date: Aug 2020</p>
+                                <p>Passing the ServiceNow System Administrator Certification Exam demonstrates mastery of ServiceNow System Administration and certifies that a candidate has the skills and essential knowledge necessary to manage the configuration,
+                                    implementation, and maintenance of the ServiceNow platform. Successfully passing this certification exam also establishes the core skill set necessary to pursue further certification for individuals.</p>
+                                <p>After having spent six months using ServiceNow in my role as Student Developer at San Diego State University's IT User Services Department, I felt sufficiently prepared to take this exam.</p>
                             </div>
-                            <div class="col-4">
-                                <img src="https://live.staticflickr.com/65535/50643148262_0dfb89e093_w.jpg" style='height:"50%"; width:"50%; object-fit: contain;' />
+                            <div class="col-3">
+                                <img class="img-fluid" style='max-width: 100%; height: auto;' src="https://live.staticflickr.com/65535/50645374843_2c1640b0da_c.jpg" />
                             </div>
                         </div>
                     </li>
                 </ul>
             </div>
-
-
-            <!-- <div class="row">
-                <div>
-                    <h3>Certifications</h3>
-                </div>
-            </div>
-            <div class="row" style='outline: 1px dashed green;'>
-
-                <ul>
-                    <li>
-                        <div class='row' style='width:10vw; position:relative; display:flex; flex-direction: row; outline: 1px dashed red;'>
-                            <div class='col-md-8' style='outline:1px dashed green;'>
-
-                                <p>col-8</p>
-                            </div>
-                            <div class='col-md-4' sytle='outline:1px dashed red;'>
-                            </div>
-                        </div>
-                    </li>
-                </ul> -->
-            <!-- <div class='col-8'>
-
-                    <ul>
-                        <li>
-                            <h3 class="secondary">ServiceNow Systems Administrator</h3>
-                            <div style='display:flex; flex-direction: row;'>
-                                <div class="col-8">
-                                    <p>Course Description</p>
-                                </div>
-                                <div class="col-4" style='outline: 1px dashed peachpuff;'>
-    
-    
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class='col-4'>
-
-                </div> -->
-
-
-
         </div>
 
         <!--Responsibilities List-->
     </div>
-    <!--Site-Wrap-->
 
-    <div class="site-wrap row" style='outline: 2px dashed green;'>
-        <div class="col-10 " style='outline: 2px dashed blue;'>
-            <h3 class="primary">
-                <a href="">
-                    <p style='text-align: center;'>Web Page Road Map</p>
-                </a>
-            </h3>
+    <div class="site-wrap">
+        <div class="d-flex flex-column col-4 col-xl-3" style=' padding: 10px; box-shadow: 0 0 10px 5px rgba(0,0,0,.5);'>
+            <div>
+                <div class="col">
+                    <h3 class="primary"><a href="sdsu.html"> Career Site Web Development </a></h3>
+                    <h3 class="secondary">Oct 2020 - Current</h3>
+                </div>
+                <div class="col">
+                    <p> Starting in the Fall of 2020, I have begun a project to produce a website that will allow me to not only learn new techniques and develop skills in web development, but also grant me the opportunity to demonstrate some of my work
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <img class="img-fluid" style=' max-width: 100%; height: auto;' src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" />
+            </div>
         </div>
-        <div class="col-2" style='outline: 2px dashed red;'>
-            <!-- <img src="https://icon-icons.com/icons2/2429/PNG/128/trello_logo_icon_147221.png" class="align-right" style='height:50%; width: 50%; object-fit: contain;' /> -->
-        </div>
-        <!--Responsibilities List-->
-    </div>
-
-    <div class="site-wrap" style=' outline: 2px dashed green;'>
-        <div class="row" style='display: flex; flex-flow: row wrap;'>
-
-            <div class="project-content-box col-4 col-xl-3" style='outline: 1px dashed blue;'>
-                <div style='flex-direction: column; outline: 1px dashed purple;'>
-                    <h3 class="primary"><a href="sdsu.html"> Web Development </a></h3>
-                    <h3 class="secondary">Description 1</h3>
-                    <h3 class="secondary">Description 2</h3>
-                    <div>
-                        <p> Starting in the Fall of 2020, I have begun a project to produce a website that will allow me to not only learn new techniques and develop skills in web development, but also grant me the opportunity to demonstrate some of my work
-                        </p>
-                    </div>
+        <div class="d-flex flex-column col-4 col-xl-3" style=' padding: 10px; box-shadow: 0 0 10px 5px rgba(0,0,0,.5);'>
+            <div>
+                <div class="col">
+                    <h3 class="primary"><a href="sdsu.html"> Career Site Web Development </a></h3>
+                    <h3 class="secondary">Oct 2020 - Current</h3>
                 </div>
-                <div class="image-box" style='outline: 1px dashed red;'>
-                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" style=' height:95%; width: 95%; object-fit: contain;' />
+                <div class="col">
+                    <p> Starting in the Fall of 2020, I have begun a project to produce a website that will allow me to not only learn new techniques and develop skills in web development, but also grant me the opportunity to demonstrate some of my work
+                    </p>
                 </div>
             </div>
-
-            <div class="col-4 col-xl-3 " style='outline: 1px dashed blue;'>
-                <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
-                <h3 class="secondary">Description 1</h3>
-                <h3 class="secondary">Description 2</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <div class="image-box" style='outline: 2px dashed red;'>
-                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
-                </div>
+            <div class="col">
+                <img class="img-fluid" style=' max-width: 100%; height: auto;' src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" />
             </div>
-
-            <div class="col-4 col-xl-3 " style='outline: 1px dashed blue;'>
-                <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
-                <h3 class="secondary">Description 1</h3>
-                <h3 class="secondary">Description 2</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <div class="image-box" style='outline: 2px dashed red;'>
-                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
-                </div>
-            </div>
-
-            <div class="col-4 col-xl-3 " style='outline: 1px dashed blue;'>
-                <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
-                <h3 class="secondary">Description 1</h3>
-                <h3 class="secondary">Description 2</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <div class="image-box" style='outline: 2px dashed red;'>
-                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
-                </div>
-            </div>
-
-            <div class="col-4 col-md-3 " style='outline: 1px dashed blue;'>
-                <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
-                <h3 class="secondary">Description 1</h3>
-                <h3 class="secondary">Description 2</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <div class="image-box" style='outline: 2px dashed red;'>
-                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
-                </div>
-            </div>
-
-            <div class="col-4 col-md-3 " style='outline: 1px dashed blue;'>
-                <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
-                <h3 class="secondary">Description 1</h3>
-                <h3 class="secondary">Description 2</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <div class="image-box" style='outline: 2px dashed red;'>
-                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
-                </div>
-            </div>
-            <!--Content List-->
         </div>
         <!--Row-->
     </div>
     <!--Site-Wrap-->
-    </div>
+
     <!--Main Content-->
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
     <script src="/js/pageload-scripts.js "></script>
     <script src="/js/bootstrap.min.js "></script>
