--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div>
-            <h1> Juan Pina-Sanz</h1>
+            <h1><a href="../index.html" style='text-decoration: none; color: white;'> Juan Pina-Sanz</a></h1>
             <h2>Bachelor of Computer Science</h2>
         </div>
         <!-- <h3>San Diego State University</h3> -->
