--- a/career/career.html
+++ b/career/career.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <div>
-            <h1>Juan Pina-Sanz</h1>
+            <h1><a href="../index.html" style='text-decoration: none; color: white;'> Juan Pina-Sanz</a></h1>
             <h2>Bachelor of Computer Science</h2>
-        </div>
+        </div>>
     </header>
     <div id="nav-placeholder"></div>
     <div class="main-content">
