updated image alignment on 'about me' page, added Hackathon event page

--- a/career/career.html
+++ b/career/career.html
@@ -21,7 +21,7 @@
         <div class="site-wrap">
             <div class="row">
                 <div class="text-content-box col-md-8 col-sm-12">
-                    <h3 class="primary"><a href="sdsu.html"> San Diego State University: IT Divison, ServiceNow
+                    <h3 class="primary"><a href="https://it.sdsu.edu/activities/servicenow"> San Diego State University: IT Divison, ServiceNow
                             Deployment </a></h3>
                     <h3 class="secondary">Student Developer / Application Administrator</h3>
                     <h3 class="secondary">Feb 2020 - Aug 2020</h3>
@@ -98,7 +98,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <p>
-                        <h3 class="primary"><a>San Diego State University: Instructional Technology Services</a></h3>
+                        <h3 class="primary"><a href="https://its.sdsu.edu/">San Diego State University: Instructional Technology Services</a></h3>
                         <h3 class="secondary">Student Assistant</h3>
                         <h3 class="secondary">Oct 2019 - Jun 2020</h3>
                         <p>During the Fall 2019, I began working with the San Diego State University Instructional Technology Services(ITS) Department. Dedicated to providing support to faculty and staff, ITS also maintains the equipment in select classrooms
