--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div>
-            <h1><a href="../index.html" style='text-decoration: none; color: white;'> Juan Pina-Sanz</a></h1>
+            <h1><a href="../index.html" style='text-decoration: none; color: white;'>Juan Pina-Sanz</a></h1>
             <h2>Bachelor of Computer Science</h2>
         </div>
         <!-- <h3>San Diego State University</h3> -->
@@ -22,40 +22,46 @@
 
     <!--Main Content Box for Landing Page-->
     <div id="main-content">
-        <div class="site-wrap row">
-
-            <div class="text-content-box col-md-8">
-                <p>
-                    <h3 id="main-section-header">A bit about myself...</h3>
-                    <p>My name is Juan Pina-Sanz, although I frequently go by J.C.!</p>
-                    <p>I have recently graduated from San Diego State University (SDSU) where I majored in Computer Science.</p>
-                    <p>Born in Venezuela, but raised in San Diego California, I began my academics wanting to study film production. Although an interest in film remained, I became quickly drawn to computer science and programming a year into my academics.</p>
-                    <p>Since then I have studied mathematics, earning my Associate's Degree in Applied Math and my Bachelors in Computer Science. I spent many years working retail at my local Best Buy to support myself while going to school There, I did
-                        everything from computer sales, Geek Squad, and finally inventory specialization.</p>
-                    <p>In the Fall of 2018, I transferred to San Diego State University to continue my studies. There I studied courses in advanced mathematics, wireless networking fundementals and database implementation, among many others</p>
-                    <p>In the Fall of 2019, I took advantage of an opportunity to work on-campus for the San Diego State University, Instructional Technology Services Department (ITS), after winning a school Hackathon put on by SDSU and ServiceNow. In ITS,
-                        I specialized in supporting faculty and staff with using software and tools critical to the education experience. Additionally, I lead efforts by ITS to develop tools and applications that enhance the experience for our students.
-                        These projects included designing and implementing a program to convert recorded lecture audio into subtitles and a webtool to assist professors in converting Excel files into compatible CSVs for use in the Parscore grading program.
-                    </p>
-                    <p>In the Spring of 2020, I was presented with another opportunity to work with the SDSU IT Division's ServiceNow deployment team. Due to my past experience with the ServiceNow Hackathon, I approched by IT Division leadership to become
-                        a member of the campus team bringing ServiceNow to SDSU. Here, my responsibilities ranged from working as an application administrator for our deployment, to a developer, building, testing and maintaining our new service catalog
-                        designed to replace the existing Azure system and centralize the University's many on-campus services. Finally, I worked independently within the ServiceNow platform at SDSU to design, build, test and deploy a Mobile IT Service
-                        Management applciation for iOS/Android on campus.
-                    </p>
-                    <p>
-                        Since my graduation in August 2020, I have been actively searching work in application and software development while also broadening my skills and talents by learning new languages, frameworks and tools. I have built this website with the intent to both
-                        demonstrate my work beyond what I can put on a resume and also practice, hone and master new skills in web development.
-                    </p>
-                </p>
+        <div class="d-flex site-wrap flex-column">
+            <div>
+                <h3 id="main-section-header">A bit about myself...</h3>
             </div>
-            <!--Text Box-->
 
-            <div class="image-box col-md-4">
-                <img id="self-portrait" src="https://live.staticflickr.com/65535/50567855812_7870158bc9_b.jpg" class="align-right">
+            <div class='d-flex row flex-wrap'>
+                <div class="text-content-box col-md-8 order-0 order-xm-1">
+                    <div>
+                        <p>My name is Juan Pina-Sanz, although I frequently go by J.C.!</p>
+                        <p>I have recently graduated from San Diego State University (SDSU) where I majored in Computer Science.</p>
+                        <p>Born in Venezuela, but raised in San Diego California, I began my academics wanting to study film production. Although an interest in film remained, I became quickly drawn to computer science and programming a year into my academics.</p>
+                        <p>Since then I have studied mathematics, earning my Associate's Degree in Applied Math and my Bachelors in Computer Science. I spent many years working retail at my local Best Buy to support myself while going to school There, I
+                            did everything from computer sales, Geek Squad, and finally inventory specialization.</p>
+                        <p>In the Fall of 2018, I transferred to San Diego State University to continue my studies. There I studied courses in advanced mathematics, wireless networking fundementals and database implementation, among many others</p>
+                        <p>In the Fall of 2019, I took advantage of an opportunity to work on-campus for the San Diego State University, Instructional Technology Services Department (ITS), after winning a school Hackathon put on by SDSU and ServiceNow. In
+                            ITS, I specialized in supporting faculty and staff with using software and tools critical to the education experience. Additionally, I lead efforts by ITS to develop tools and applications that enhance the experience for our
+                            students. These projects included designing and implementing a program to convert recorded lecture audio into subtitles and a webtool to assist professors in converting Excel files into compatible CSVs for use in the Parscore
+                            grading program.
+                        </p>
+                        <p>In the Spring of 2020, I was presented with another opportunity to work with the SDSU IT Division's ServiceNow deployment team. Due to my past experience with the ServiceNow Hackathon, I approched by IT Division leadership to become
+                            a member of the campus team bringing ServiceNow to SDSU. Here, my responsibilities ranged from working as an application administrator for our deployment, to a developer, building, testing and maintaining our new service catalog
+                            designed to replace the existing Azure system and centralize the University's many on-campus services. Finally, I worked independently within the ServiceNow platform at SDSU to design, build, test and deploy a Mobile IT Service
+                            Management applciation for iOS/Android on campus.
+                        </p>
+                        <p>
+                            Since my graduation in August 2020, I have been actively searching work in application and software development while also broadening my skills and talents by learning new languages, frameworks and tools. I have built this website with the intent to both
+                            demonstrate my work beyond what I can put on a resume and also practice, hone and master new skills in web development.
+                        </p>
+                    </div>
+                </div>
+                <!--Text Box-->
+
+                <div class="col-md-4 order-1 order-xm-0">
+                    <img class="img-fluid align-self-md-center" style='max-width:90%; height:auto;' src="https://live.staticflickr.com/65535/50567855812_7870158bc9_b.jpg" class="align-right">
+                </div>
+                <!--Image Box-->
             </div>
-            <!--Image Box-->
 
         </div>
+
         <div class="site-wrap">
             <div class="text-content-box" style=' display: flex; flex-flow: column wrap;'>
                 <div class="col-12">
