--- a/education/education.html
+++ b/education/education.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <div>
-            <h1>Juan Pina-Sanz</h1>
+            <h1><a href="../index.html" style='text-decoration: none; color: white;'> Juan Pina-Sanz</a></h1>
             <h2>Bachelor of Computer Science</h2>
-        </div>
+        </div>>
     </header>
     <div id="nav-placeholder"></div>
     <div class="main-content">
@@ -54,7 +54,7 @@
                 <div>
                     <h3 class="secondary">Accomplishements</h3>
                     <ul>
-                        <li><a href="" style='color: black;'>San Diego State University/ServiceNow 2019 Hackathon</a>
+                        <li><a href="/education/2019hackathon.html" style='color: black;'>San Diego State University/ServiceNow 2019 Hackathon</a>
                         </li>
                     </ul>
                 </div>
