updated content for hackathon, adjusting image responsivness

--- a/education/education.html
+++ b/education/education.html
@@ -61,7 +61,7 @@
             </div>
             <!--Text Box-->
             <div class="image-box col-md-4">
-                <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-right">
+                <img class="img-fluid" src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" style='max-width:100%; height:auto'>
             </div>
             <!--Image Box-->
         </div>
