--- a/projectsandadditionalstudies/projects.html
+++ b/projectsandadditionalstudies/projects.html
@@ -4,7 +4,7 @@
 <head>
     <title> Projects/Additional Studies</title>
     <meta charset="UTF-8">
-    <meta name="Description" content="Projects/Additinal Studies">
+    <meta name="Description" content="Projects/Additional Studies">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -41,7 +41,7 @@
                                         This five week course designed to introduce students to the basics of web application development. Combined with my own back ground in computer science, I found this course to be facinating and useful as I continued my own study of application development.
                                     </p>
                                     <p>
-                                        Utlization of tools such as jQuery and Ajax strengthened my understanding of web development and how to efficiently use web frameworks and tools such as Bootstrap to build intuitive and responsive web sites.
+                                        Utilization of tools such as jQuery and Ajax strengthened my understanding of web development and how to efficiently use web frameworks and tools such as Bootstrap to build intuitive and responsive web sites.
                                     </p>
                                 </div>
                             </div>
@@ -92,7 +92,7 @@
                     <h3 class="secondary">Oct 2020 - Current</h3>
                 </div>
                 <div class="col">
-                    <p> Starting in the Fall of 2020, I have begun a project to produce a website that will allow me to not only learn new techniques and develop skills in web development, but also grant me the opportunity to demonstrate some of my work
+                    <p> Starting in the Fall of 2020, I have begun a project to produce a website that will allow me to not only learn new techniques and develop skills in web development, but also grant me the opportunity to demonstrate some of my work.
                     </p>
                 </div>
             </div>
