--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -23,12 +23,12 @@
     <!--Main Content Box for Landing Page-->
     <div id="main-content">
         <div class="d-flex site-wrap flex-column">
-            <div>
+            <div class=>
                 <h3 id="main-section-header">A bit about myself...</h3>
             </div>
 
-            <div class='d-flex row flex-wrap'>
-                <div class="text-content-box col-md-8 order-0 order-xm-1">
+            <div class="d-flex flex-row flex-wrap">
+                <div class="text-content-box col-md-8 flex-sm-column flex-wrap order-md-0 order-sm-1">
                     <div>
                         <p>My name is Juan Pina-Sanz, although I frequently go by J.C.!</p>
                         <p>I have recently graduated from San Diego State University (SDSU) where I majored in Computer Science.</p>
@@ -44,7 +44,7 @@
                         <p>In the Spring of 2020, I was presented with another opportunity to work with the SDSU IT Division's ServiceNow deployment team. Due to my past experience with the ServiceNow Hackathon, I approched by IT Division leadership to become
                             a member of the campus team bringing ServiceNow to SDSU. Here, my responsibilities ranged from working as an application administrator for our deployment, to a developer, building, testing and maintaining our new service catalog
                             designed to replace the existing Azure system and centralize the University's many on-campus services. Finally, I worked independently within the ServiceNow platform at SDSU to design, build, test and deploy a Mobile IT Service
-                            Management applciation for iOS/Android on campus.
+                            Management application for iOS/Android on campus.
                         </p>
                         <p>
                             Since my graduation in August 2020, I have been actively searching work in application and software development while also broadening my skills and talents by learning new languages, frameworks and tools. I have built this website with the intent to both
@@ -54,8 +54,8 @@
                 </div>
                 <!--Text Box-->
 
-                <div class="col-md-4 order-1 order-xm-0">
-                    <img class="img-fluid align-self-md-center" style='max-width:90%; height:auto;' src="https://live.staticflickr.com/65535/50567855812_7870158bc9_b.jpg" class="align-right">
+                <div class="col-md-4 order-md-1 order-sm-0">
+                    <img class="img-fluid align-self-md-center" style='max-width:80%; height:auto;' src="https://live.staticflickr.com/65535/50567855812_7870158bc9_b.jpg" class="align-right">
                 </div>
                 <!--Image Box-->
             </div>
